# gary-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  cursor-mcp-config.json  cursor-mcp-local.json  cursor-mcp.json  docker-compose.mcp.yml  env.mcp.example  pyproject.toml  test_aws_github_mcp.py  test_mcp_servers.py
docker/: aws-cli-mcp.Dockerfile  aws-mcp.Dockerfile  base.Dockerfile  db-mcp.Dockerfile  flyio-mcp.Dockerfile  github-cli-mcp.Dockerfile  github-mcp.Dockerfile  hyperbrowser-mcp.Dockerfile  node-mcp.Dockerfile  obsidian-mcp.Dockerfile  official-docs-mcp.Dockerfile  pdf-mcp.Dockerfile  playwright-mcp.Dockerfile
docs/: cursor-mcp-parameters.md  cursor-mcp-setup.md  manifest.yaml  mcp-docker-setup.md
docs/pages/: python-main.yaml
scripts/: start-mcp-servers.sh  sync_docs.py
src/: __init__.py  server.py
src/infrastructure/: mcp_client.py
src/infrastructure/db/: connection_manager.py
src/infrastructure/docs/: crawler.py  storage.py
src/servers/: __init__.py  aws_server.py  base_server.py  db_server.py  flyio_server.py  github_server.py  official_docs_server.py  pdf_server.py
src/tools/: __init__.py  aws_tool.py  cli_executor.py  code_analysis_tool.py  db_tool.py  docs_index.py  docs_parser.py  docs_registry.py  docs_service.py  document_tool.py  flyio_tool.py  github_tool.py  mcp_proxy_tool.py  official_docs.py  pdf_tool.py
src/utils/: __init__.py  config_loader.py  env_loader.py  file_utils.py
tests/: test_cli_services.py  test_code_analysis_service.py  test_db_tool.py  test_document_service.py  test_official_docs.py  test_pdf_service.py
