[project]
name = "gary-mcp"
version = "0.1.0"
description = "MCP Server for workspace document reference, AWS/Fly.io access, PDF conversion, and code analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "aiohttp>=3.9.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]

