[project]
name = "gary-mcp"
version = "0.1.0"
description = "MCP Server for workspace document reference, AWS/Fly.io access, PDF conversion, and code analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "aiohttp>=3.9.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "weasyprint>=60.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "pydantic>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "types-requests",
    "types-PyYAML",
]

